added notification-service and config-repo